# experimentation-sim-lab

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/experimentation_sim_lab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/simlab/: intervals.py  report.py  simulate.py  sweep.py
tests/: test_intervals.py  test_report.py  test_simulate.py  test_sweep.py
